--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -38,6 +37,14 @@
         android:layout_width="wrap_content"
         android:text="退出"
         android:layout_height="wrap_content" />
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/advTest"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize ="BANNER"
+        ads:adUnitId = "ca-app-pub-3940256099942544/6300978111"
+        ></com.google.android.gms.ads.AdView>
     <Button
         android:id="@+id/btnFileStoreSave"
         android:layout_width="wrap_content"
